yeah siguiendo pasos

--- a/HappyBirthday/app/src/main/res/layout/activity_main.xml
+++ b/HappyBirthday/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,9 @@
         android:id="@+id/happy_birthday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="36sp"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@android:color/white"
         android:text="Happy Birthday Julio!" />
 
     <TextView
@@ -18,6 +21,9 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:paddingRight="24dp"
+        android:textSize="36sp"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@android:color/white"
         android:text="From, Carlos"/>
 
     <ImageView
