--- a/HappyBirthday/app/src/main/res/layout/activity_main.xml
+++ b/HappyBirthday/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:fontFamily="sans-serif-light"
         android:textColor="@android:color/white"
         android:padding="20dp"
-        android:text="Happy Birthday Julio!" />
+        android:text="Happy Birthday, Toni!" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,6 +31,6 @@
         android:textSize="36sp"
         android:fontFamily="sans-serif-light"
         android:textColor="@android:color/white"
-        android:text="From, Carlos"/>
+        android:text="From, Edu"/>
 
 </RelativeLayout>
